Mobile Chrome background jumping fix

--- a/css/grid.css
+++ b/css/grid.css
@@ -4,9 +4,6 @@
 
 .content {
   float: left;
-}
-
-.content {
   width: 100%;
 }
 
